--- a/assets/style.css
+++ b/assets/style.css
@@ -6,7 +6,6 @@ img{
 .header-title{
   font-family: "Fredoka", serif;
   text-transform: uppercase;
-  text-align: center;
   font-size: 6.5rem;
   font-style: italic;
 }
@@ -47,4 +46,22 @@ img{
   font-family: "Vibur", cursive;
   font-size:1.2rem;
   padding:.5rem 0;
+}
+
+@media (max-width:1199px){
+  .polaroid{
+    width:calc(100% / 2 - 25px);
+  }
+}
+
+@media (max-width:768px){
+  .polaroid{
+    width:calc(100% - 25px);
+  }
+}
+
+@media (max-width:576px){
+  .header-title{
+    font-size: 5.5rem;
+  }
 }
