--- a/assets/style.css
+++ b/assets/style.css
@@ -1,6 +1,16 @@
 
 img{
   max-width: 100%;
+  width: 100%;
+}
+
+#lightbox{
+  position: absolute;
+  width:100%;
+  height:100%;
+  background-color: rgba(0, 0, 0, 0.708);
+  z-index:150;
+  padding:30px;
 }
 
 .header-title{
@@ -31,6 +41,12 @@ img{
   padding:20px;
   aspect-ratio: 3 / 3.5;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  cursor: pointer;
+}
+
+.polaroid-hover{
+  transform: rotate(5deg) scale(1.1);
+  z-index:2;
 }
 
 .pin{
